# laser_toolbox

./: .gitignore  pyproject.toml
doc/: Makefile  PrismPair.qmd  PrismPair_Demo.py  PrismPair_geometry.af  calculate_w_h.py  refs.bib
src/laser_toolbox/: __init__.py  berek.py  bloch.py  nlo.py  prism_pair.py  sellmeier.py  types.py
tests/: test_init.py  test_prism_pair.py  test_sellmeier.py
