[project]
name = "laser-toolbox"
version = "0.1.0"
description = "Tool box for laser spectroscopy"
readme = "README.md"
authors = [{ name = "Ryuichi Arafune", email = "ryuichi.arafune@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
